--- a/index.html
+++ b/index.html
@@ -14,15 +14,26 @@
   </head>
 
   <body>
-    <div class="LAimg">lambda-black.png</div>
     <div class="container">
-      <div class="index-links">
-        <a href="#">Home</a>
-        <a href="about.html">About</a>
-        <a href="#">Products</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-      </div>
+      <section class="section-1">
+        <div class="LAimg">
+          <img src="img/lambda-black.png" alt="Top left Lambda Logo" />
+        </div>
+        <div class="index-links">
+          <a href="#" style="text-decoration: none;">Home</a>
+          <a href="about.html" style="text-decoration: none;">About</a>
+          <a href="#" style="text-decoration: none;">Products</a>
+          <a href="#" style="text-decoration: none;">Blog</a>
+          <a href="#" style="text-decoration: none;">Contact</a>
+        </div>
+      </section>
+      <section class="road-img">
+        <img
+          src="img/jumbo.jpg"
+          alt="road image between section-1 &
+        top-content"
+        />
+      </section>
 
       <section class="top-content">
         <div class="text-container">
@@ -49,16 +60,16 @@
         <h2>Why Did It Have To Be Boxes...</h2>
 
         <div class="boxes">
-          <div class="box">Box 1</div>
-          <div class="box">Box 2</div>
-          <div class="box">Box 3</div>
-          <div class="box">Box 4</div>
-          <div class="box">Box 5</div>
-          <div class="box">Box 6</div>
-          <div class="box">Box 7</div>
-          <div class="box">Box 8</div>
-          <div class="box">Box 9</div>
-          <div class="box">Box 10</div>
+          <div class="box-teal">Box 1</div>
+          <div class="box-gold">Box 2</div>
+          <div class="box-cadetblue">Box 3</div>
+          <div class="box-coral">Box 4</div>
+          <div class="box-crimson">Box 5</div>
+          <div class="box-forestgreen">Box 6</div>
+          <div class="box-darkorchid">Box 7</div>
+          <div class="box-hotpink">Box 8</div>
+          <div class="box-indigo">Box 9</div>
+          <div class="box-dodgerblue">Box 10</div>
         </div>
       </section>
 
