--- a/about.html
+++ b/about.html
@@ -14,61 +14,90 @@
   </head>
 
   <body>
-    <section class="section-1">
-      <div class="LAimg">
-        <img src="img/lambda-black.png" alt="Top left Lambda Logo" />
+    <div class="container">
+      <section class="section-1">
+        <div class="LAimg">
+          <img src="img/lambda-black.png" alt="Top left Lambda Logo" />
+        </div>
+        <div class="index-links">
+          <a href="index.html" style="text-decoration: none;">Home</a>
+          <a href="about.html" style="text-decoration: none;">About</a>
+          <a href="#" style="text-decoration: none;">Products</a>
+          <a href="#" style="text-decoration: none;">Blog</a>
+          <a href="#" style="text-decoration: none;">Contact</a>
+        </div>
+      </section>
+      <div class="road-img">
+        <img
+          src="img/jumbo-about.png"
+          alt="about page image between section-1 & container a-p"
+        />
       </div>
-      <div class="index-links">
-        <a href="index.html" style="text-decoration: none;">Home</a>
-        <a href="about.html" style="text-decoration: none;">About</a>
-        <a href="#" style="text-decoration: none;">Products</a>
-        <a href="#" style="text-decoration: none;">Blog</a>
-        <a href="#" style="text-decoration: none;">Contact</a>
+      <div class="container about-page">
+        About
+        <p>
+          Leverage agile frameworks to provide a robust synopsis for high level
+          overviews. Iterative approaches to corporate strategy foster
+          collaborative thinking to further the overall value proposition.
+          Organically grow the holistic world view of disruptive innovation via
+          workplace diversity and empowerment.
+        </p>
+
+        <img src="img/about-plan.png" alt="strategy" />
+
+        Strategy
+        <p>
+          Iterative approaches to corporate strategy foster collaborative
+          thinking to further the overall value proposition.
+        </p>
+        <button>Learn More</button>
+
+        <img src="img/about-working.png" alt="strategy" />
+
+        How We Work
+        <p>
+          Iterative approaches to corporate strategy foster collaborative
+          thinking to further the overall value proposition.
+        </p>
+        <button>Learn More</button>
+
+        <img src="img/about-office.png" alt="strategy" />
+
+        Places We Work
+        <p>
+          Iterative approaches to corporate strategy foster collaborative
+          thinking to further the overall value proposition.
+        </p>
+        <button>Learn More</button>
+
+        <img src="img/about-meeting.png" alt="strategy" />
+
+        Collaboration
+        <p>
+          Iterative approaches to corporate strategy foster collaborative
+          thinking to further the overall value proposition.
+        </p>
+        <button>Learn More</button>
+
+        Let's Work Together
+        <p>
+          Leverage agile frameworks to provide a robust synopsis for high level
+          overviews. Iterative approaches to corporate strategy foster
+          collaborative thinking to further the overall value proposition.
+          Organically grow the holistic world view of disruptive innovation via
+          workplace diversity and empowerment.
+        </p>
+
+        <footer>
+          <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="#">Products</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
+          </nav>
+        </footer>
       </div>
-    </section>
-    <div class="container about-page">
-      About Leverage agile frameworks to provide a robust synopsis for high
-      level overviews. Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition.
-      Organically grow the holistic world view of disruptive innovation via
-      workplace diversity and empowerment.
-
-      <img src="img/about-plan.png" alt="strategy" />
-
-      Strategy Iterative approaches to corporate strategy foster collaborative
-      thinking to further the overall value proposition. Learn More
-
-      <img src="img/about-working.png" alt="strategy" />
-
-      How We Work Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition. Learn
-      More
-
-      <img src="img/about-office.png" alt="strategy" />
-
-      Places We Work Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition. Learn
-      More
-
-      <img src="img/about-meeting.png" alt="strategy" />
-
-      Collaboration Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition. Learn
-      More Let's Work Together Leverage agile frameworks to provide a robust
-      synopsis for high level overviews. Iterative approaches to corporate
-      strategy foster collaborative thinking to further the overall value
-      proposition. Organically grow the holistic world view of disruptive
-      innovation via workplace diversity and empowerment.
-
-      <footer>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="#">Products</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact</a>
-        </nav>
-      </footer>
     </div>
     <!-- container -->
   </body>
