--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img src="img/lambda-black.png" alt="Top left Lambda Logo" />
         </div>
         <div class="index-links">
-          <a href="#" style="text-decoration: none;">Home</a>
+          <a href="index.html" style="text-decoration: none;">Home</a>
           <a href="about.html" style="text-decoration: none;">About</a>
           <a href="#" style="text-decoration: none;">Products</a>
           <a href="#" style="text-decoration: none;">Blog</a>
