--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         />
       </div>
       <div class="container about-page">
-        About
+        <h2>About</h2>
         <p>
           Leverage agile frameworks to provide a robust synopsis for high level
           overviews. Iterative approaches to corporate strategy foster
@@ -45,7 +45,7 @@
 
         <img src="img/about-plan.png" alt="strategy" />
 
-        Strategy
+        <h2>Strategy</h2>
         <p>
           Iterative approaches to corporate strategy foster collaborative
           thinking to further the overall value proposition.
@@ -54,7 +54,7 @@
 
         <img src="img/about-working.png" alt="strategy" />
 
-        How We Work
+        <h2>How We Work</h2>
         <p>
           Iterative approaches to corporate strategy foster collaborative
           thinking to further the overall value proposition.
@@ -63,7 +63,7 @@
 
         <img src="img/about-office.png" alt="strategy" />
 
-        Places We Work
+        <h2>Places We Work</h2>
         <p>
           Iterative approaches to corporate strategy foster collaborative
           thinking to further the overall value proposition.
@@ -72,14 +72,14 @@
 
         <img src="img/about-meeting.png" alt="strategy" />
 
-        Collaboration
+        <h2>Collaboration</h2>
         <p>
           Iterative approaches to corporate strategy foster collaborative
           thinking to further the overall value proposition.
         </p>
         <button>Learn More</button>
 
-        Let's Work Together
+        <h2>Let's Work Together</h2>
         <p>
           Leverage agile frameworks to provide a robust synopsis for high level
           overviews. Iterative approaches to corporate strategy foster
