--- a/about.html
+++ b/about.html
@@ -44,24 +44,33 @@
             via workplace diversity and empowerment.
           </p>
         </div>
+        <div class="strategy">
+          <div class="plan-pic">
+            <img src="img/about-plan.png" alt="strategy" />
+          </div>
+          <div class="strategy-h2">
+            <h2>Strategy</h2>
+          </div>
+          <div class="strategy-p">
+            <p>
+              Iterative approaches to corporate strategy foster collaborative
+              thinking to further the overall value proposition.
+            </p>
+          </div>
+          <div class="strategy-but">
+            <button>Learn More</button>
+          </div>
+        </div>
+        <div class="HWW">
+          <img src="img/about-working.png" alt="strategy" />
 
-        <img src="img/about-plan.png" alt="strategy" />
-
-        <h2>Strategy</h2>
-        <p>
-          Iterative approaches to corporate strategy foster collaborative
-          thinking to further the overall value proposition.
-        </p>
-        <button>Learn More</button>
-
-        <img src="img/about-working.png" alt="strategy" />
-
-        <h2>How We Work</h2>
-        <p>
-          Iterative approaches to corporate strategy foster collaborative
-          thinking to further the overall value proposition.
-        </p>
-        <button>Learn More</button>
+          <h2>How We Work</h2>
+          <p>
+            Iterative approaches to corporate strategy foster collaborative
+            thinking to further the overall value proposition.
+          </p>
+          <button>Learn More</button>
+        </div>
 
         <img src="img/about-office.png" alt="strategy" />
 
