--- a/about.html
+++ b/about.html
@@ -64,34 +64,38 @@
             <button>Learn More</button>
           </div>
         </div>
+        <div class="second-group">
+          <div class="PWW">
+            <img src="img/about-office.png" alt="strategy" />
 
-        <img src="img/about-office.png" alt="strategy" />
+            <h2>Places We Work</h2>
+            <p>
+              Iterative approaches to corporate strategy foster collaborative
+              thinking to further the overall value proposition.
+            </p>
+            <button>Learn More</button>
+          </div>
+          <div class="Collaboration">
+            <img src="img/about-meeting.png" alt="strategy" />
 
-        <h2>Places We Work</h2>
-        <p>
-          Iterative approaches to corporate strategy foster collaborative
-          thinking to further the overall value proposition.
-        </p>
-        <button>Learn More</button>
-
-        <img src="img/about-meeting.png" alt="strategy" />
-
-        <h2>Collaboration</h2>
-        <p>
-          Iterative approaches to corporate strategy foster collaborative
-          thinking to further the overall value proposition.
-        </p>
-        <button>Learn More</button>
-
-        <h2>Let's Work Together</h2>
-        <p>
-          Leverage agile frameworks to provide a robust synopsis for high level
-          overviews. Iterative approaches to corporate strategy foster
-          collaborative thinking to further the overall value proposition.
-          Organically grow the holistic world view of disruptive innovation via
-          workplace diversity and empowerment.
-        </p>
-
+            <h2>Collaboration</h2>
+            <p>
+              Iterative approaches to corporate strategy foster collaborative
+              thinking to further the overall value proposition.
+            </p>
+            <button>Learn More</button>
+          </div>
+        </div>
+        <div class="LWT">
+          <h2>Let's Work Together</h2>
+          <p>
+            Leverage agile frameworks to provide a robust synopsis for high
+            level overviews. Iterative approaches to corporate strategy foster
+            collaborative thinking to further the overall value proposition.
+            Organically grow the holistic world view of disruptive innovation
+            via workplace diversity and empowerment.
+          </p>
+        </div>
         <footer>
           <nav>
             <a href="index.html">Home</a>
